:hammer: Preventing stretched image

--- a/assets/css/febrian.css
+++ b/assets/css/febrian.css
@@ -64,6 +64,5 @@
 
 .img-responsive {
   width: 100%;
-  height:500px;
   margin-bottom: 10px;
 }
